<resources>
    <string name="app_name">myMAZE</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">myMAZE</string>
    <string name="popup_question_label">You are about to quit. Are you sure?</string>
    <string name="popup_question_yes">Yes, I want to quit.</string>
    <string name="popup_question_no">No, I don\'t want to quit.</string>
    <string name="popup_notify_okay">Got it, thanks!</string>
    <string name="main_menu_play">Play the Demo Maze</string>
    <string name="main_menu_my_maze">My Maze...</string>
    <string name="main_menu_make">Make a Maze</string>
    <string name="main_menu_edit">Edit My Maze</string>
    <string name="main_menu_load">Play My Maze</string>
    <string name="main_menu_email">Send My Maze</string>
    <string name="main_menu_import">Import a Maze File</string>
    <string name="main_menu_label">What would you like to do?</string>
    <string name="main_menu_quit">Quit</string>
    <string name="main_menu_copyright">© 2013 - 2017 Original Content Software</string>
    <string name="my_maze_menu_label">What would you like to do?</string>
    <string name="my_maze_menu_edit">Edit My Maze</string>
    <string name="my_maze_menu_load">Play My Maze</string>
    <string name="my_maze_menu_email">Send My Maze</string>
    <string name="my_maze_menu_load_error">You haven\'t created a maze to play!</string>
    <string name="my_maze_menu_email_error">You haven\'t created a maze to send!</string>
    <string name="my_maze_menu_return">Return to Main Menu</string>
    <string name="make_maze_name_label">Maze Name</string>
    <string name="make_maze_created_by_label">Created By</string>
    <string name="make_maze_question_label">Question</string>
    <string name="make_maze_choiceA">Choice A</string>
    <string name="make_maze_choiceB">Choice B</string>
    <string name="make_maze_choiceC">Choice C</string>
    <string name="make_maze_choiceD">Choice D</string>
    <string name="make_maze_size_label">Maze Difficulty</string>
    <string name="make_maze_size_small">Easy</string>
    <string name="make_maze_size_medium">Normal</string>
    <string name="make_maze_size_large">Hard</string>
    <string name="make_maze_size_small_info">Note: For an EASY maze, it is recommended that you add between 1 and 5 questions. However, you are not limited to that range.</string>
    <string name="make_maze_size_medium_info">Note: For a NORMAL maze, it is recommended that you add between 5 and 15 questions. However, you are not limited to that range.</string>
    <string name="make_maze_size_large_info">Note: For a HARD maze, it is recommended that you add between 15 and 25 questions. However, you are not limited to that range.</string>
    <string name="make_maze_add_picture">Add a picture to this question?</string>
    <string name="make_maze_correct_label">Correct Answer</string>
    <string name="make_maze_incorrect_label">When the player gets this question wrong, the player should…</string>
    <string name="make_maze_incorrect_nothing">remain in front of the gate so s/he can try to answer the question again.</string>
    <string name="make_maze_incorrect_restart_player">be sent back to the beginning of the maze.</string>
    <string name="make_maze_incorrect_remove_gate">remain at the current spot in the maze, but the gate is no longer accessible (the gate turns into a wall).</string>
    <string name="make_maze_incorrect_time_penalty">be penalized 10 seconds when the maze is completed.</string>
    <string name="make_maze_add_question">Save this Question and Add Another</string>
    <string name="make_maze_done">Save and Play My Maze</string>
    <string name="make_maze_remove_question">Remove this Question</string>
    <string name="make_maze_edit_add_question">Save Changes and Continue Editing/Adding Questions</string>
    <string name="make_maze_edit_done">Save Changes and Play My Maze</string>
    <string name="make_maze_cancel">Cancel</string>
    <string name="make_maze_previous">Prev Question</string>
    <string name="make_maze_next">Next Question</string>
    <string name="make_maze_edit_questions">KEEP Existing Maze and EDIT Existing Questions</string>
    <string name="make_maze_regenerate_maze">RE-GENERATE Maze and KEEP Existing Questions</string>
    <string name="make_maze_regenerate_maze_edit_questions">RE-GENERATE Maze and EDIT Existing Questions</string>
    <string name="make_maze_generate_maze_add_questions">Generate Maze and Start Adding Questions</string>
    <string name="question_mode_choiceA">A</string>
    <string name="question_mode_choiceB">B</string>
    <string name="question_mode_choiceC">C</string>
    <string name="question_mode_choiceD">D</string>
    <string name="question_mode_leave">Return to the Maze</string>
    <string name="question_mode_submit">Submit My Answer</string>
    <string name="question_mode_correct">Correct. You have cleared this gate.</string>
    <string name="question_mode_incorrect_nothing">Incorrect. You can try again if you wish.</string>
    <string name="question_mode_incorrect_restart_player">Incorrect. You have been sent back to the beginning of the maze.</string>
    <string name="question_mode_incorrect_remove_gate">Incorrect. You can no longer access this gate, and you must go another way.</string>
    <string name="question_mode_incorrect_time_penalty">Incorrect. You have incurred a 10 second penalty.</string>
    <string name="load_maze_label">Maze File Name:</string>
    <string name="load_maze_default">new_maze.ocsmaze</string>
    <string name="load_maze_load">Load this Maze</string>
    <string name="popup_cancel_label">You have chosen to cancel, and you are about to lose any questions you have added or changes you have made. Are you sure?</string>
    <string name="popup_cancel_yes">Yes, I want to cancel.</string>
    <string name="popup_cancel_no">No, I don\'t want to cancel.</string>
    <string name="popup_done_label">You have chosen to complete maze creation, and you are about to save and play your maze. If you have previously created a maze, this action will overwrite it. Are you sure?</string>
    <string name="popup_done_yes">Yes, I am done.</string>
    <string name="popup_done_no">No, I am not done.</string>
    <string name="popup_remove_question_label">You have chosen to remove this question. Are you sure?</string>
    <string name="popup_remove_question_yes">Yes, I want to remove this question.</string>
    <string name="popup_remove_question_no">No, I don\'t want to remove this question.</string>
    <string name="load_maze_file_name">About this maze...</string>
    <string name="load_maze_name">Name:</string>
    <string name="load_maze_created_by">Created by:</string>
    <string name="load_maze_difficulty">Maze difficulty:</string>
    <string name="load_maze_number_questions">Number of questions:</string>
    <string name="load_maze_number_gates">Number of gates:</string>
    <string name="load_maze_fail">Could not load maze.</string>
    <string name="maze_complete_message">Congratulations! You have completed the maze.</string>
    <string name="maze_complete_time">Time:</string>
    <string name="maze_complete_cleared_gates"># of gates you cleared:</string>
    <string name="maze_complete_completion">% of the maze you covered:</string>
    <string name="maze_complete_missed_questions"># of questions you missed:</string>
    <string name="maze_complete_number_moves"># of moves you made:</string>
    <string name="maze_complete_number_backtrack_moves"># of moves where you backtracked:</string>
    <string name="maze_complete_send_email">Send My Stats</string>
    <string name="maze_complete_return">Got it, thanks!</string>
    <string name="maze_dizzy_1">You begin to feel sick to the stomach!</string>
    <string name="maze_dizzy_2">You feel yucky</string>
    <string name="maze_dizzy_3">Uh oh.</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_restart">Restart</string>
    <string name="make_maze_store_fail">The maze could not be saved. Please try again.</string>
    <string name="aerial_no_swipe_1">Swiping is not allowed. It would make the game way too easy.</string>
    <string name="aerial_no_swipe_2">No, really, swiping is not allowed. You can stop trying to move this view.</string>
    <string name="aerial_no_swipe_3">Seriously, swiping is not allowed. It is never going to work. Please stop it.</string>
    <string name="aerial_no_swipe_4">What part of \"swiping is not allowed\" do you not understand?</string>
    <string name="aerial_no_swipe_5">Okay, whatever. Swipe all you want. We can pop these messages up all day long.</string>
    <string name="aerial_no_swipe_6">Still swiping, eh? How\'s that working out for you?</string>
    <string name="email_maze_complete_subject">Maze completion stats...</string>
    <string name="email_maze_complete_message1">I have completed the following maze:</string>
    <string name="email_maze_complete_message2">My completion stats for this maze are as follows:</string>
    <string name="email_maze_complete_time">Time:</string>
    <string name="email_maze_complete_cleared_gates"># of gates I cleared:</string>
    <string name="email_maze_complete_completion">% of the maze I covered:</string>
    <string name="email_maze_complete_missed_questions"># of questions I missed:</string>
    <string name="email_maze_complete_number_moves"># of moves I made:</string>
    <string name="email_maze_complete_number_backtrack_moves"># of moves where I backtracked:</string>
    <string name="email_maze_complete_legal">Original Content Software, the maker of myMAZE, is neither responsible nor can be held liable for the contents of this email.</string>
    <string name="email_maze_send_subject">A new maze for you...</string>
    <string name="email_maze_send_message1">I made a maze for you:</string>
    <string name="email_maze_send_message2">To play the maze, click on the attachment and the game should do the rest. Good luck!</string>
    <string name="email_maze_send_legal">Original Content Software, the maker of myMAZE, is neither responsible nor can be held liable for the contents of this email or the attached maze file.</string>
    <string name="make_maze_add_question_fail">An error was encountered while adding this question. The question could not be added to this maze. Please consider sending error report to Original Content Software.</string>
    <string name="email_error_send_subject">myMAZE Error Report</string>
    <string name="email_error_send_message1">The following error occurred while adding a question to the maze:</string>
    <string name="make_maze_add_question_fail_okay">Understood.</string>
    <string name="make_maze_add_question_fail_email">Send error report</string>

</resources>
