<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/questionLayout"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:fadeScrollbars="false" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/hLinearLayoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionLayout"
        android:layout_centerInParent="true" >

        <Button
            android:id="@+id/imageButton2"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:layout_marginRight="25dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:text="@string/question_mode_choiceA"
            android:textSize="20sp" />

        <Button
            android:id="@+id/imageButton3"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:text="@string/question_mode_choiceB"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hLinearLayoutButtons2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hLinearLayoutButtons"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp" >

        <Button
            android:id="@+id/imageButton4"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:layout_marginRight="25dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/question_mode_choiceC"
            android:textSize="20sp" />

        <Button
            android:id="@+id/imageButton5"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/question_mode_choiceD"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/imageButton1"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@id/hLinearLayoutButtons2"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:text="@string/question_mode_leave"
        android:textSize="15sp" />

</RelativeLayout>